working docker-compose file, mongo container and node container, react app served with ngix container, react app running through nginx, hapi not well connected to mongo

--- a/hapijs/package.json
+++ b/hapijs/package.json
@@ -12,9 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^20.0.3",
-    "mongoose": "^5.11.8"
-  },
-  "devDependencies": {
+    "mongoose": "^5.11.8",
     "nodemon": "^2.0.6"
   }
 }
