--- a/awesomereactapp/Dockerfile
+++ b/awesomereactapp/Dockerfile
@@ -1,21 +1,19 @@
 FROM node:15.5.0-alpine as react_build
 #also say
-WORKDIR /app
+WORKDIR /usr/src/app
 #copy the react app to the container
-COPY . /app/
+COPY . /usr/src/app
 
-# #prepare the contiainer for building react
+# prepare the contiainer for building react
 RUN npm install --silent
 RUN npm install react-scripts@3.0.1 -g --silent
 RUN npm run build
 
 #prepare nginx
 FROM nginx:1.19.6-alpine
-COPY --from=react_build /app/build /usr/share/nginx/html
+COPY --from=react_build /usr/src/app/build /usr/share/nginx/html
 RUN rm /etc/nginx/conf.d/default.conf
 COPY nginx/nginx.conf /etc/nginx/conf.d
-
-
 
 #fire up nginx
 EXPOSE 80
