--- a/hapijs/Dockerfile
+++ b/hapijs/Dockerfile
@@ -1,8 +1,9 @@
 FROM node:15.5.0-alpine as hapi_build
-#also say
-WORKDIR /app
-#copy the react app to the container
-COPY . /app/
-RUN npm install --silent
-CMD ["npm", "start"]
-
+WORKDIR /usr/src/app
+COPY package*.json ./
+RUN npm install
+# Copy app source code
+COPY . /usr/src/app
+#Expose port and start application
+EXPOSE 3000
+CMD [ "npm", "start" ]
